--- a/HTML-CSS-COURSE/15fChallengeExercise.html
+++ b/HTML-CSS-COURSE/15fChallengeExercise.html
@@ -67,7 +67,7 @@
         <img class="shirt" src="thumbnails/sean-black-viscose-shirt-with-white-polka-dots.jpg">
         <div class="top">20% OFF</div>
         <div class="content">
-          <button class="btnAdd">Add to box</button>
+          <button class="btnAdd">Add to Cart</button>
         </div>
       </div>
 
